commit after lecture

--- a/src/test/resources/elements.html
+++ b/src/test/resources/elements.html
@@ -60,8 +60,8 @@
                 <td>Universitātes</td>
                 <td>
                     <select name="universities" id="universitiesID">
-                        <option value="LU">Latvijas Universitāte</option>
-                        <option value="RTU">Rīgas Tehniskā universitāte</option>
+                        <option id="Juris" value="LU">Latvijas Universitāte</option>
+                        <option  value="RTU">Rīgas Tehniskā universitāte</option>
                         <option value="RSU">Rīgas Stradiņa universitāte</option>
                     </select>
                 </td>
